Changelog
=========

HEAD
~~~~

chameleon.html 0.5 (released 11/13/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for macro usage. [malthe]

chameleon.html 0.4 (released 10/28/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Add newline character between glob-exploded tags. [malthe]

- Use relative URL if resource location component is
  unavailable. [malthe]

- Added code to enable ``glob`` style matching of resources [seletz]

- Resource URLs are now made absolute to dettach them from the
  template object. [malthe]

- Changed test setup to allow for python based tests, i.e. not
  using the zope test runner. [seletz]

chameleon.html 0.3 (released 10/2/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Comments are now ignored (previously an exception would be
  raised). [malthe]

chameleon.html 0.2 (released 10/1/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added 'append' and 'prepend' insertion modes. [malthe]

- Template is invalidated when XSS-files are modified. [malthe]

chameleon.html 0.1 (released 9/25/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added resource rebase support. [malthe]

- Initial release.
