@@ -4,6 +4,9 @@ Changelog
 HEAD
 ~~~~
 
+- Remove quotes which may be used on attribute values to comply with
+  CSS3, e.g. dot ('.'). [malthe]
+
 chameleon.html 0.5 (released 11/13/2008)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
